fix overflowing pet images

--- a/src/components/layout/PetCard.css
+++ b/src/components/layout/PetCard.css
@@ -49,6 +49,7 @@
 .card__img {
   object-fit: cover;
   height: 300px;
+  width: 100%;
 }
 
 .card__body {
